# Vera

./: .dockerignore  .gitignore  AGENT-USAGE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  INSTRUCTION.md  LICENSE  README.md  SKILL.md  competitive-landscape-report.md  docker-compose.yml  skills-lock.json  vera-planning.md  vera_agent_guardrails.md  vera_factory_mission_brief.md  vera_mission_kickoff.txt  vera_mission_packet.md  vera_reference_hypotheses.md
.factory/: init.sh  services.yaml
benchmarks/: indexing-performance.md
crates/vera-core/: Cargo.toml  build.rs
crates/vera-core/src/: chunk_text.rs  config.rs  corpus.rs  lib.rs  local_models.rs  token_budget.rs  types.rs
crates/vera-core/src/discovery/: mod.rs
crates/vera-core/src/embedding/: dynamic.rs  local_provider.rs  mod.rs  provider.rs  tests.rs
crates/vera-core/src/indexing/: mod.rs  pipeline.rs  update.rs  update_tests.rs
crates/vera-core/src/parsing/: chunker.rs  extractor.rs  languages.rs  mod.rs
crates/vera-core/src/retrieval/: completion_client.rs  dynamic_reranker.rs  hybrid.rs  local_reranker.rs  mod.rs  query_utils.rs  rag_fusion.rs  ranking.rs  regex_search.rs  reranker.rs  search_quality_tests.rs  search_service.rs  vector.rs
crates/vera-core/src/storage/: bm25.rs  metadata.rs  mod.rs  vector.rs
docker/: vera-cli-entrypoint.sh
docker-data/: vera-docker.sh
docs/: accuracy-recovery-v0.4-to-v0.6.md  architecture.md  (+9 more)
eval/: Cargo.toml  corpus.toml  setup-corpus.sh
eval/src/: loader.rs  main.rs  metrics.rs  output.rs  runner.rs  types.rs
eval/tasks/: sample-tasks.json
(+92 files in other folders)
