[package]
name = "vera-eval"
version = "0.1.0"
edition = "2024"
description = "Evaluation harness for Vera code indexing & retrieval"

[[bin]]
name = "vera-eval"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
