[package]
name = "vera-core"
description = "Core engine for Vera: parsing, indexing, retrieval, storage, and embedding"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Tree-sitter parsing
tree-sitter = { workspace = true }

# Storage backends
rusqlite = { workspace = true }
tantivy = { workspace = true }

# HTTP client for embedding/reranker APIs
reqwest = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["test-util", "macros"] }
